test/Fail/Issue779with.err
Issue779with.agda:5.3-7.16: error: [NotValidBeforeField]
This declaration is illegal in a record before the last field
when scope checking the declaration
  record R where
    Bla : Set1
    Bla with Set
    ... | _ = Set
    field F : Set
